tests/cases/errors/parser/stmt_expr.vnm
fn main() {
  let x = 0;
  let y = 1;
  if (x < y) {
    print x;
  }
  return 0;
}

main()
